<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LOGSCREEN.loginScreen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/new_loginscreen"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/logScreenUsername"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/signUpHintEmail"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/logScreenPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/logScreenPassword"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:hint="@string/loginHintPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/logScreenLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logScreenLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/button_back"
        android:text="GİRİŞ YAP"
        app:layout_constraintBottom_toTopOf="@+id/logScreenUnderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logScreenUnderText"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="28dp"
        android:text="@string/loginDownText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logScreenSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="19dp"
        android:background="@drawable/button_back"
        android:backgroundTint="@color/white"
        android:text="KAYIT OL"
        app:layout_constraintBottom_toTopOf="@+id/logScreenLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="68dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/logScreenUnderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>